<resources>
    <string name="app_name">Android Geocache</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_add_message">Add a message</string>
    <string name="title_activity_profile">My profile</string>
    <string name="title_user_search">User search</string>


    <!-- NavBar Strings -->
    <string name="nav_header">Navigation menu</string>
    <string name="nav_add_message">Add a message</string>
    <string name="nav_my_profile">My profile</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_user_search">Search for users</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_map">Map</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Strings for about page -->
    <string name="pref_about_name">App Name</string>
    <string name="pref_about_name_summary">Android Geocache</string>

    <string name="pref_about_creators">Created By</string>
    <string name="pref_about_creators_summary">André Gunhildberget, Benjamin Gordon Wendling &amp; Eivind Vold Aunebakk</string>

    <string name="pref_about_version">Version</string>
    <string name="pref_about_version_summary">1.0.0</string>

    <!-- Strings for login and registration -->
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>

    <string name="prompt_name">Full name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>

    <string name="welcome">Welcome !</string>

    <string name="invalid_name">The name must be 6 or more characters</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_password">Password must be 6 or more characters</string>
    <string name="invalid_confirm_password">The passwords do not match</string>

    <string name="login_failed">Login failed</string>
    <string name="register_failed">Registration failed</string>
</resources>
