<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <Preference
        android:summary="@string/pref_about_name_summary"
        android:title="@string/pref_about_name" />

    <Preference
        android:summary="@string/pref_about_creators_summary"
        android:title="@string/pref_about_creators" />
    <Preference
        android:summary="@string/pref_about_version_summary"
        android:title="@string/pref_about_version" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->


</PreferenceScreen>
