<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_message"
            android:icon="@drawable/ic_message"
            android:title="@string/nav_add_message" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/nav_my_profile" />
        <item
            android:id="@+id/nav_user_search"
            android:icon="@drawable/ic_search"
            android:title="@string/nav_user_search" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>
</menu>